# physics_engine

./: .gitignore  CMakeLists.txt  Makefile  cli.cpp  main.cpp
mod/: laws.cpp  laws.h  object.cpp  object.h  operators.cpp  operators.h
